# scene-exporter

./: CMakeLists.txt  readme.md
src/: ExportedVertexFormat.h  Exporter.cpp  Exporter.hpp  main.cpp
